--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     </header>
     <main class="main">
       <section id="new-task-section">
-        <label class="label" for="new-task">Add Item</label>
+        <h3><label class="label" for="new-task">Add Item</label></h3>
         <div class="task-wrapper">
           <input id="new-task" class="task input" type="text">
           <button class="btn">Add</button>
