--- a/index.html
+++ b/index.html
@@ -6,13 +6,15 @@
     <link rel="stylesheet" href="style.css" media="screen" charset="utf-8">
   </head>
   <body class="page">
-    <header class="header">
-      <img class="header-img" src="./eisenhower-matrix.jpg">
+    <aside class="header">
+      <img class="header-img" src="./eisenhower-matrix.jpg" alt="The Eisenhower matrix">
       <a class="more-inf" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
-    </header>
+    </aside>
     <main class="main">
       <section id="new-task-section">
-        <h3><label class="label" for="new-task">Add Item</label></h3>
+        <h3>
+          <label class="label" for="new-task">Add Item</label>
+        </h3>
         <div class="task-wrapper">
           <input id="new-task" class="task input" type="text">
           <button class="btn">Add</button>
@@ -27,7 +29,7 @@
             <input class="task input" type="text">
             <button class="edit-btn btn">Edit</button>
             <button class="delete btn">
-              <img class="del-btn-img" src="./remove.svg">
+              <img class="del-btn-img" src="./remove.svg" alt="">
             </button>
           </li>
           <li class="edit-mode list">
@@ -36,7 +38,7 @@
             <input type="text" value="Go Shopping" class="task input">
             <button class="edit-btn btn">Save</button>
             <button class="delete btn">
-              <img class="del-btn-img" src="./remove.svg">
+              <img class="del-btn-img" src="./remove.svg" alt="">
             </button>
           </li>
         </ul>
@@ -50,7 +52,7 @@
             <input type="text" class="task input">
             <button class="edit-btn btn">Edit</button>
             <button class="delete btn">
-              <img class="del-btn-img" src="./remove.svg">
+              <img class="del-btn-img" src="./remove.svg" alt="">
             </button>
           </li>
         </ul>
