--- a/1/index.html
+++ b/1/index.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-</head>
-<body>
-  <div><span> sdfsdfs</span></div>
-  <span><span> 12312312312</span></span>
-  <span>fawfa</span>
-  <span>fawfa</span>
-  <span>fawfasdfs</span>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+  </head>
+  <body>
+    <p>"& amp;"</p>
+    <p>&amp amp;</p>
+    <p>& amp;</p>
+    <p>&amp; amp;</p>
+    <p>&amp; amp&#59;</p>
+  </body>
 </html>
